[gd_scene load_steps=3 format=3 uid="uid://r51jtjosr2cs"]

[ext_resource type="Script" uid="uid://jx4e42hsaaf5" path="res://scripts/KarateReflexesGame.gd" id="1_dm2h2"]
[ext_resource type="Texture2D" uid="uid://bislrsxj1gxrp" path="res://scripts/FighterFace.png" id="2_2m3i2"]

[node name="KarateReflexesGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dm2h2")

[node name="CharacterFace" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 250.0
offset_right = 250.0
offset_bottom = 750.0
grow_horizontal = 2
texture = ExtResource("2_2m3i2")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 420.0
offset_right = 200.0
offset_bottom = 620.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 770.0
offset_right = 150.0
offset_bottom = 920.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Time Left:"

[node name="AttackContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AttackPositions" type="Node2D" parent="."]

[node name="UpperLeft" type="Marker2D" parent="AttackPositions"]
position = Vector2(1000, 650)

[node name="UpperRight" type="Marker2D" parent="AttackPositions"]
position = Vector2(2750, 650)

[node name="LowerLeft" type="Marker2D" parent="AttackPositions"]
position = Vector2(1000, 1500)

[node name="LowerRight" type="Marker2D" parent="AttackPositions"]
position = Vector2(2750, 1500)

[node name="ComboLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1140.0
offset_top = -411.0
offset_right = -440.0
offset_bottom = -261.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.77254903, 0.11372549, 1)
theme_override_font_sizes/font_size = 90
text = "Combo"
